Add pokemon feature
