# api/swagger/swagger.yaml
@@ -3,8 +3,8 @@ info:
   version: "0.0.1"
   title: Game Collector App
 # during dev, should point to your local machine
-
-host: advance-engine-250015.appspot.com
+host: localhost:10010
+#host: advance-engine-250015.appspot.com
 
 x-google-endpoints:
 - name: 'advance-engine-250015.appspot.com'
@@ -257,6 +257,141 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
+            
+  /pokemones:
+    x-swagger-router-controller: pokemon.controller
+    get:
+      description: get the pokemon list
+      parameters:
+        - name: name
+          in: query
+          type: string
+          required: false
+        - name: des
+          in: query
+          type: string
+          required: false
+        - name: imageLink
+          in: query
+          type: string
+          required: false
+        - name: power
+          in: query
+          type: number
+          required: false
+        - name: locationLat
+          in: query
+          type: string
+          required: false
+        - name: locatonLong
+          in: query
+          type: string
+          required: false
+        - name: isCatch
+          in: query
+          type: boolean
+          required: false
+        - name: sort
+          in: query
+          type: string
+          required: false
+        - name: fields
+          in: query  
+          type: string
+          required: false          
+      operationId: getPokemones
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/GetPokemonListResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+    post:
+      description: add a new pokemon to the list
+      parameters:
+        - in: body
+          name: pokemon
+          description: The pokemon to create.
+          schema:
+            $ref: "#/definitions/Pokemon"
+      operationId: createPokemon
+      responses:
+        "201":
+          description: Success
+          schema:
+            $ref: "#/definitions/GetPokemonResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+
+  /pokemones/{id}:
+    x-swagger-router-controller: pokemon.controller
+
+    get:
+      description: get a pokemon
+      parameters:
+        - name: id
+          type: string
+          in: path
+          required: true
+      operationId: getPokemonById
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/GetPokemonResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+
+    put:
+      description: update a pokemon
+      parameters:
+        - name: id
+          description: pokemon id
+          type: string
+          in: path
+          required: true
+        - in: body
+          name: pokemon
+          description: The pokemon to update.
+          schema:
+            $ref: "#/definitions/Pokemon"
+      operationId: updatePokemon
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/GetPokemonResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+
+    delete:
+      description: delete a pokemon
+      parameters:
+        - name: id
+          description: pokemon id
+          type: string
+          in: path
+          required: true
+      operationId: deletePokemon
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/GeneralResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+    
   /swagger:
     x-swagger-pipe: swagger_raw
     
@@ -290,6 +425,39 @@ definitions:
       - gamesystem
       - genre
       - year
+
+  Pokemon:
+    type: object
+    properties:
+      name:
+        type: string
+        description: Name of the game
+      des:
+        type: string
+        description: Description of the pokemon
+      imageLink:
+        type: string
+        description: Link of the image pokemon
+      power:
+        type: number
+        description: Power of the pokemon
+      locationLat:
+        type: string
+        description: Latitude of the pokemon
+      locationLong:
+        type: string
+        description: Longitude of the pokemon
+      isCatch:
+        type: boolean
+        description: Pokemon is catch or not
+    required:
+      - name
+      - des
+      - imageLink
+      - power
+      - locationLong
+      - locationLat
+      - isCatch
       
   GetVideoGameResponse:
     type: object
@@ -323,6 +491,42 @@ definitions:
       - genre
       - year
       
+  GetPokemonResponse:
+    type: object
+    properties:
+      id:
+        type: number
+        description: identifier
+      name:
+        type: string
+        description: Name of the pokemon
+      des:
+        type: string
+        description: Description of the pokemon
+      imageLink:
+        type: string
+        description: URL of the pokemon image
+      power:
+        type: number
+        description: Power of the pokemon
+      locationLat:
+        type: string
+        description: Latitude of the pokemon
+      locationLong:
+        type: string
+        description: Longitude of the pokemon
+      isCatch:
+        type: boolean
+        description: Pokemon is catch or not
+    required:
+      - name
+      - des
+      - imageLink
+      - power
+      - locationLat
+      - locationLong
+      - isCatch
+      
   GetVideoGameListResponse:
     required:
       - videogames
@@ -330,7 +534,16 @@ definitions:
       videogames:
         type: array
         items:
-          $ref: "#/definitions/GetVideoGameResponse"  
+          $ref: "#/definitions/GetVideoGameResponse" 
+          
+  GetPokemonListResponse:
+    required:
+      - pokemones
+    properties:
+      pokemones:
+        type: array
+        items:
+          $ref: "#/definitions/GetPokemonResponse"
   
   GeneralResponse:
     type: object
